# cc-modern-cmake

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  cookiecutter.json  tasks.py
extensions/: cchelpers.py
hooks/: post_gen_project.py
tests/: conftest.py  test_bake_project.py  test_inv_commands.py
tests/helpers/: __init__.py
{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  manifest.toml  tasks.py
{{cookiecutter.project_slug}}/include/{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/src/app/: CMakeLists.txt  main.cpp
{{cookiecutter.project_slug}}/src/lib/: CMakeLists.txt  {{cookiecutter.project_slug}}.cpp
{{cookiecutter.project_slug}}/tests/: CMakeLists.txt  catch2_qt.h  main.cpp  test_{{cookiecutter.project_slug}}.cpp
